[package]
name = "mysql2csv"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.23", features = ["derive"] }
clap_derive = "4.5.18"
csv = "1.3.1"
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3.31"
indicatif = "0.17.9"
log = "0.4.22"
regex = "1"
rust_decimal = "1.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["mysql",
        "runtime-tokio-native-tls", 
        "rust_decimal", 
        "chrono",
        "time",
    ] }
tokio = { version="1.41.1", features= ["full"] }
